--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>tensquare_base</module>
         <module>tensquare_recruit</module>
         <module>tensquare_qa</module>
+        <module>tensquare_article</module>
     </modules>
     <!-- Inherit defaults from Spring Boot -->
     <parent>
