--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>tensquare_user</module>
         <module>tensquare_sms</module>
         <module>tensquare_eureka</module>
+        <module>tensquare_friend</module>
     </modules>
     <!-- Inherit defaults from Spring Boot -->
     <parent>
